// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/StatusBar Status Bar 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="status-bar"
  >
    <div
      className="pr-2 mr-4 border-r border-gray-600"
    >
      <span
        className="mr-2"
      >
        Status:
      </span>
      <Tag
        pillStyle={true}
      >
        <div
          className="tag is-pill"
        >
          Draft
        </div>
      </Tag>
    </div>
    <div>
      <span
        className="mr-4"
      >
        Last Updated: August 1, 2020
      </span>
    </div>
    <Button
      filled={true}
      onClick={[Function]}
      small={true}
    >
      <button
        className="button is-filled is-small"
        onClick={[Function]}
      >
        Save
      </button>
    </Button>
  </div>
</div>
`;

exports[`Storyshots Prototypes/StatusBar Status Bar Submitted 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="status-bar"
  >
    <div
      className="pr-2 mr-4 border-r border-gray-600"
    >
      <span
        className="mr-2"
      >
        Status:
      </span>
      <Tag
        pillStyle={true}
        success={true}
      >
        <div
          className="tag is-success is-pill"
        >
          Success
        </div>
      </Tag>
    </div>
    <div>
      <span
        className="mr-4"
      >
        Last Updated: August 1, 2020
      </span>
    </div>
    <Button
      onClick={[Function]}
      small={true}
    >
      <button
        className="button is-small"
        onClick={[Function]}
      >
        Edit
      </button>
    </Button>
  </div>
</div>
`;
